<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="estore.lacys.com.lacysestore.reviews.kittyhoodier">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView android:text="@string/kittyhoodier" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#ff000000"
            android:textStyle="bold|italic" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edittextfield"
            android:hint="@string/reviewdefaulttext"
            android:editable="true"
            android:gravity="left|top" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:gravity="right"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Reviews"
            android:id="@+id/textView2" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reviewlist" />
    </LinearLayout>

</RelativeLayout>

