<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/touch"
    android:background="#ffe1e1e1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="95dp"
            android:text="@string/cart"
            android:id="@+id/cart"
            android:bottomRightRadius="20dp"
            android:bottomLeftRadius="20dp"
            android:topLeftRadius="20dp"
            android:topRightRadius="20dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical|left"
            android:textSize="45sp"
            android:background="@drawable/cartbutton"
            android:textColor="#222"
            android:typeface="monospace"
            android:textStyle="bold"
            android:contentDescription="@string/cartbutton" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:id="@+id/middlebuttonlayout">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:text="@string/browse"
                android:id="@+id/kidsbutton"
                android:bottomRightRadius="20dp"
                android:bottomLeftRadius="20dp"
                android:topLeftRadius="20dp"
                android:topRightRadius="20dp"
                android:textAlignment="gravity"
                android:gravity="center_vertical|left"
                android:textSize="45sp"
                android:textColor="#222"
                android:background="@drawable/kidsbutton"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/kidsbutton" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:text="@string/browse"
                android:id="@+id/mensbutton"
                android:bottomRightRadius="20dp"
                android:bottomLeftRadius="20dp"
                android:topLeftRadius="20dp"
                android:topRightRadius="20dp"
                android:textAlignment="gravity"
                android:gravity="center_vertical|left"
                android:textSize="45sp"
                android:textColor="#222"
                android:background="@drawable/mensbutton"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/mensbutton" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/browse"
                android:id="@+id/womensbutton"
                android:bottomRightRadius="20dp"
                android:bottomLeftRadius="20dp"
                android:topLeftRadius="20dp"
                android:topRightRadius="20dp"
                android:textAlignment="gravity"
                android:gravity="center_vertical|left"
                android:textSize="45sp"
                android:textColor="#222"
                android:background="@drawable/womensbutton"
                android:typeface="monospace"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/womensbutton" />
        </LinearLayout>

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="125dp"
            android:text="@string/login"
            android:id="@+id/login"
            android:bottomRightRadius="20dp"
            android:bottomLeftRadius="20dp"
            android:topLeftRadius="20dp"
            android:topRightRadius="20dp"
            android:layout_below="@+id/middlebuttonlayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="5dp"
            android:gravity="center_vertical|right"
            android:textSize="45sp"
            android:textColor="#222"
            android:typeface="monospace"
            android:textStyle="bold"
            android:background="@drawable/loginbutton" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lacyslogo" />

    </LinearLayout>

</RelativeLayout>